using System;
using System.Collections.Generic;
using System.Text;

namespace Module06_Formats_Echanges_PreparationCours.Entites
{
    public interface Forme
    {
    }
}
