using System;
using System.Collections.Generic;
using System.Text;

namespace Module06_Formats_Echanges_PreparationCours.Entites
{
    public class Point2D
    {
        public int X { get; set; }
        public int Y { get; set; }
    }
}
