@startuml DiagDessin

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor #000
}

Dessin --> "*" Forme
Forme <|-- Cercle
Forme <|-- Polygone
Cercle --> "1" Point2D
Polygone --> "3..n" Point2D

class Point2D {
    + X : int <<get>> <<set>>
    + Y : int <<get>> <<set>>
}

abstract Forme {
    
}

class Cercle {
    + Rayon : int <<get>> <<set>>
    + Centre : Point2D<<get>> <<set>>
}

class Polygone {
    + Sommets : List<Point2D> <<get>> <<set>>    
}

@enduml